--- a/compose/docker-compose.prod.yml
+++ b/compose/docker-compose.prod.yml
@@ -9,3 +9,24 @@ services:
     ports:
       - "8000:8000"
     restart: unless-stopped
+    depends_on:
+      - db
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_NAME: offside_db
+      DB_USER: offside_user
+      DB_PASSWORD: offside_pass
+  db:
+    image: postgres:16
+    container_name: offsidestats-db
+    restart: always
+    environment:
+      POSTGRES_USER: offside_user
+      POSTGRES_PASSWORD: offside_pass
+      POSTGRES_DB: offside_db
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+volumes:
+  db_data:
